Fix inability to Drag+Drop screenshot due to subfolder in filename

Summary:
Fixes the mentioned bug by creating all necessary subdirectories.

BUG: 417722

Test Plan:
1. Set save Filename in Spectacle to one including one or more `/`, thus including subdirectories. Example: `%Y/%M/screen-%2d`
2. Take a screenshot
3. Start dragging the preview

Reviewers: #spectacle, davidre, ngraham

Reviewed By: #spectacle, davidre, ngraham

Subscribers: ngraham, davidre, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D28702